--- a/examples/AVRPia.ipynb
+++ b/examples/AVRPia.ipynb
@@ -66,7 +66,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "(env) AlphaCRV$ alphacrv-cluster \\\n",
+    "AlphaCRV$ alphacrv-cluster \\\n",
     "--bait ./examples/AVRPia/AVRPia.fasta \\\n",
     "--binders ./examples/AVRPia/AVRPia_binders.fasta \\\n",
     "--models_dir ./examples/AVRPia/AVRPia_vs_rice_models \\\n",
@@ -862,72 +862,72 @@
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_23c6a_row0_col1, #T_23c6a_row0_col2, #T_23c6a_row0_col3, #T_23c6a_row0_col4, #T_23c6a_row1_col3, #T_23c6a_row2_col4 {\n",
+       "#T_b801f_row0_col1, #T_b801f_row0_col2, #T_b801f_row0_col3, #T_b801f_row0_col4, #T_b801f_row1_col3, #T_b801f_row2_col4 {\n",
        "  background-color: #0b0405;\n",
        "  color: #f1f1f1;\n",
        "}\n",
-       "#T_23c6a_row1_col1 {\n",
+       "#T_b801f_row1_col1 {\n",
        "  background-color: #38629d;\n",
        "  color: #f1f1f1;\n",
        "}\n",
-       "#T_23c6a_row1_col2, #T_23c6a_row2_col2 {\n",
+       "#T_b801f_row1_col2, #T_b801f_row2_col2 {\n",
        "  background-color: #def5e5;\n",
        "  color: #000000;\n",
        "}\n",
-       "#T_23c6a_row1_col4 {\n",
+       "#T_b801f_row1_col4 {\n",
        "  background-color: #221425;\n",
        "  color: #f1f1f1;\n",
        "}\n",
-       "#T_23c6a_row2_col1 {\n",
+       "#T_b801f_row2_col1 {\n",
        "  background-color: #3c3060;\n",
        "  color: #f1f1f1;\n",
        "}\n",
-       "#T_23c6a_row2_col3 {\n",
+       "#T_b801f_row2_col3 {\n",
        "  background-color: #357aa2;\n",
        "  color: #f1f1f1;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_23c6a\">\n",
+       "<table id=\"T_b801f\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_23c6a_level0_col0\" class=\"col_heading level0 col0\" >cluster</th>\n",
-       "      <th id=\"T_23c6a_level0_col1\" class=\"col_heading level0 col1\" >tmscore</th>\n",
-       "      <th id=\"T_23c6a_level0_col2\" class=\"col_heading level0 col2\" >rmsd</th>\n",
-       "      <th id=\"T_23c6a_level0_col3\" class=\"col_heading level0 col3\" >cluster_size</th>\n",
-       "      <th id=\"T_23c6a_level0_col4\" class=\"col_heading level0 col4\" >fraction_binder</th>\n",
+       "      <th id=\"T_b801f_level0_col0\" class=\"col_heading level0 col0\" >cluster</th>\n",
+       "      <th id=\"T_b801f_level0_col1\" class=\"col_heading level0 col1\" >tmscore</th>\n",
+       "      <th id=\"T_b801f_level0_col2\" class=\"col_heading level0 col2\" >rmsd</th>\n",
+       "      <th id=\"T_b801f_level0_col3\" class=\"col_heading level0 col3\" >cluster_size</th>\n",
+       "      <th id=\"T_b801f_level0_col4\" class=\"col_heading level0 col4\" >fraction_binder</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_23c6a_level0_row0\" class=\"row_heading level0 row0\" >59</th>\n",
-       "      <td id=\"T_23c6a_row0_col0\" class=\"data row0 col0\" >Q7XL74.pdb_B</td>\n",
-       "      <td id=\"T_23c6a_row0_col1\" class=\"data row0 col1\" >0.90</td>\n",
-       "      <td id=\"T_23c6a_row0_col2\" class=\"data row0 col2\" >1.49</td>\n",
-       "      <td id=\"T_23c6a_row0_col3\" class=\"data row0 col3\" >40.00</td>\n",
-       "      <td id=\"T_23c6a_row0_col4\" class=\"data row0 col4\" >0.94</td>\n",
+       "      <th id=\"T_b801f_level0_row0\" class=\"row_heading level0 row0\" >59</th>\n",
+       "      <td id=\"T_b801f_row0_col0\" class=\"data row0 col0\" >Q7XL74.pdb_B</td>\n",
+       "      <td id=\"T_b801f_row0_col1\" class=\"data row0 col1\" >0.90</td>\n",
+       "      <td id=\"T_b801f_row0_col2\" class=\"data row0 col2\" >1.49</td>\n",
+       "      <td id=\"T_b801f_row0_col3\" class=\"data row0 col3\" >40.00</td>\n",
+       "      <td id=\"T_b801f_row0_col4\" class=\"data row0 col4\" >0.94</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_23c6a_level0_row1\" class=\"row_heading level0 row1\" >22</th>\n",
-       "      <td id=\"T_23c6a_row1_col0\" class=\"data row1 col0\" >Q6Z1A9.pdb_B</td>\n",
-       "      <td id=\"T_23c6a_row1_col1\" class=\"data row1 col1\" >0.55</td>\n",
-       "      <td id=\"T_23c6a_row1_col2\" class=\"data row1 col2\" >10.65</td>\n",
-       "      <td id=\"T_23c6a_row1_col3\" class=\"data row1 col3\" >49.00</td>\n",
-       "      <td id=\"T_23c6a_row1_col4\" class=\"data row1 col4\" >0.84</td>\n",
+       "      <th id=\"T_b801f_level0_row1\" class=\"row_heading level0 row1\" >22</th>\n",
+       "      <td id=\"T_b801f_row1_col0\" class=\"data row1 col0\" >Q6Z1A9.pdb_B</td>\n",
+       "      <td id=\"T_b801f_row1_col1\" class=\"data row1 col1\" >0.55</td>\n",
+       "      <td id=\"T_b801f_row1_col2\" class=\"data row1 col2\" >10.65</td>\n",
+       "      <td id=\"T_b801f_row1_col3\" class=\"data row1 col3\" >49.00</td>\n",
+       "      <td id=\"T_b801f_row1_col4\" class=\"data row1 col4\" >0.84</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_23c6a_level0_row2\" class=\"row_heading level0 row2\" >4</th>\n",
-       "      <td id=\"T_23c6a_row2_col0\" class=\"data row2 col0\" >P42211.pdb_B</td>\n",
-       "      <td id=\"T_23c6a_row2_col1\" class=\"data row2 col1\" >0.66</td>\n",
-       "      <td id=\"T_23c6a_row2_col2\" class=\"data row2 col2\" >10.75</td>\n",
-       "      <td id=\"T_23c6a_row2_col3\" class=\"data row2 col3\" >10.00</td>\n",
-       "      <td id=\"T_23c6a_row2_col4\" class=\"data row2 col4\" >0.90</td>\n",
+       "      <th id=\"T_b801f_level0_row2\" class=\"row_heading level0 row2\" >4</th>\n",
+       "      <td id=\"T_b801f_row2_col0\" class=\"data row2 col0\" >P42211.pdb_B</td>\n",
+       "      <td id=\"T_b801f_row2_col1\" class=\"data row2 col1\" >0.66</td>\n",
+       "      <td id=\"T_b801f_row2_col2\" class=\"data row2 col2\" >10.75</td>\n",
+       "      <td id=\"T_b801f_row2_col3\" class=\"data row2 col3\" >10.00</td>\n",
+       "      <td id=\"T_b801f_row2_col4\" class=\"data row2 col4\" >0.90</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x1473a1a0b850>"
+       "<pandas.io.formats.style.Styler at 0x152c11de7e20>"
       ]
      },
      "execution_count": 16,
@@ -965,72 +965,72 @@
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_5b4c1_row0_col1 {\n",
+       "#T_45169_row0_col1 {\n",
        "  background-color: #38629d;\n",
        "  color: #f1f1f1;\n",
        "}\n",
-       "#T_5b4c1_row0_col2, #T_5b4c1_row2_col2 {\n",
+       "#T_45169_row0_col2, #T_45169_row2_col2 {\n",
        "  background-color: #def5e5;\n",
        "  color: #000000;\n",
        "}\n",
-       "#T_5b4c1_row0_col3, #T_5b4c1_row1_col1, #T_5b4c1_row1_col2, #T_5b4c1_row1_col3, #T_5b4c1_row1_col4, #T_5b4c1_row2_col4 {\n",
+       "#T_45169_row0_col3, #T_45169_row1_col1, #T_45169_row1_col2, #T_45169_row1_col3, #T_45169_row1_col4, #T_45169_row2_col4 {\n",
        "  background-color: #0b0405;\n",
        "  color: #f1f1f1;\n",
        "}\n",
-       "#T_5b4c1_row0_col4 {\n",
+       "#T_45169_row0_col4 {\n",
        "  background-color: #221425;\n",
        "  color: #f1f1f1;\n",
        "}\n",
-       "#T_5b4c1_row2_col1 {\n",
+       "#T_45169_row2_col1 {\n",
        "  background-color: #3c3060;\n",
        "  color: #f1f1f1;\n",
        "}\n",
-       "#T_5b4c1_row2_col3 {\n",
+       "#T_45169_row2_col3 {\n",
        "  background-color: #357aa2;\n",
        "  color: #f1f1f1;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_5b4c1\">\n",
+       "<table id=\"T_45169\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_5b4c1_level0_col0\" class=\"col_heading level0 col0\" >cluster</th>\n",
-       "      <th id=\"T_5b4c1_level0_col1\" class=\"col_heading level0 col1\" >tmscore</th>\n",
-       "      <th id=\"T_5b4c1_level0_col2\" class=\"col_heading level0 col2\" >rmsd</th>\n",
-       "      <th id=\"T_5b4c1_level0_col3\" class=\"col_heading level0 col3\" >cluster_size</th>\n",
-       "      <th id=\"T_5b4c1_level0_col4\" class=\"col_heading level0 col4\" >fraction_binder</th>\n",
+       "      <th id=\"T_45169_level0_col0\" class=\"col_heading level0 col0\" >cluster</th>\n",
+       "      <th id=\"T_45169_level0_col1\" class=\"col_heading level0 col1\" >tmscore</th>\n",
+       "      <th id=\"T_45169_level0_col2\" class=\"col_heading level0 col2\" >rmsd</th>\n",
+       "      <th id=\"T_45169_level0_col3\" class=\"col_heading level0 col3\" >cluster_size</th>\n",
+       "      <th id=\"T_45169_level0_col4\" class=\"col_heading level0 col4\" >fraction_binder</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_5b4c1_level0_row0\" class=\"row_heading level0 row0\" >22</th>\n",
-       "      <td id=\"T_5b4c1_row0_col0\" class=\"data row0 col0\" >Q6Z1A9.pdb_B</td>\n",
-       "      <td id=\"T_5b4c1_row0_col1\" class=\"data row0 col1\" >0.55</td>\n",
-       "      <td id=\"T_5b4c1_row0_col2\" class=\"data row0 col2\" >10.65</td>\n",
-       "      <td id=\"T_5b4c1_row0_col3\" class=\"data row0 col3\" >49.00</td>\n",
-       "      <td id=\"T_5b4c1_row0_col4\" class=\"data row0 col4\" >0.84</td>\n",
+       "      <th id=\"T_45169_level0_row0\" class=\"row_heading level0 row0\" >22</th>\n",
+       "      <td id=\"T_45169_row0_col0\" class=\"data row0 col0\" >Q6Z1A9.pdb_B</td>\n",
+       "      <td id=\"T_45169_row0_col1\" class=\"data row0 col1\" >0.55</td>\n",
+       "      <td id=\"T_45169_row0_col2\" class=\"data row0 col2\" >10.65</td>\n",
+       "      <td id=\"T_45169_row0_col3\" class=\"data row0 col3\" >49.00</td>\n",
+       "      <td id=\"T_45169_row0_col4\" class=\"data row0 col4\" >0.84</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_5b4c1_level0_row1\" class=\"row_heading level0 row1\" >59</th>\n",
-       "      <td id=\"T_5b4c1_row1_col0\" class=\"data row1 col0\" >Q7XL74.pdb_B</td>\n",
-       "      <td id=\"T_5b4c1_row1_col1\" class=\"data row1 col1\" >0.90</td>\n",
-       "      <td id=\"T_5b4c1_row1_col2\" class=\"data row1 col2\" >1.49</td>\n",
-       "      <td id=\"T_5b4c1_row1_col3\" class=\"data row1 col3\" >40.00</td>\n",
-       "      <td id=\"T_5b4c1_row1_col4\" class=\"data row1 col4\" >0.94</td>\n",
+       "      <th id=\"T_45169_level0_row1\" class=\"row_heading level0 row1\" >59</th>\n",
+       "      <td id=\"T_45169_row1_col0\" class=\"data row1 col0\" >Q7XL74.pdb_B</td>\n",
+       "      <td id=\"T_45169_row1_col1\" class=\"data row1 col1\" >0.90</td>\n",
+       "      <td id=\"T_45169_row1_col2\" class=\"data row1 col2\" >1.49</td>\n",
+       "      <td id=\"T_45169_row1_col3\" class=\"data row1 col3\" >40.00</td>\n",
+       "      <td id=\"T_45169_row1_col4\" class=\"data row1 col4\" >0.94</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_5b4c1_level0_row2\" class=\"row_heading level0 row2\" >4</th>\n",
-       "      <td id=\"T_5b4c1_row2_col0\" class=\"data row2 col0\" >P42211.pdb_B</td>\n",
-       "      <td id=\"T_5b4c1_row2_col1\" class=\"data row2 col1\" >0.66</td>\n",
-       "      <td id=\"T_5b4c1_row2_col2\" class=\"data row2 col2\" >10.75</td>\n",
-       "      <td id=\"T_5b4c1_row2_col3\" class=\"data row2 col3\" >10.00</td>\n",
-       "      <td id=\"T_5b4c1_row2_col4\" class=\"data row2 col4\" >0.90</td>\n",
+       "      <th id=\"T_45169_level0_row2\" class=\"row_heading level0 row2\" >4</th>\n",
+       "      <td id=\"T_45169_row2_col0\" class=\"data row2 col0\" >P42211.pdb_B</td>\n",
+       "      <td id=\"T_45169_row2_col1\" class=\"data row2 col1\" >0.66</td>\n",
+       "      <td id=\"T_45169_row2_col2\" class=\"data row2 col2\" >10.75</td>\n",
+       "      <td id=\"T_45169_row2_col3\" class=\"data row2 col3\" >10.00</td>\n",
+       "      <td id=\"T_45169_row2_col4\" class=\"data row2 col4\" >0.90</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x147341b232e0>"
+       "<pandas.io.formats.style.Styler at 0x152c11e31420>"
       ]
      },
      "execution_count": 17,
@@ -1061,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1072,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1223,7 +1223,7 @@
        "84      6Q76-1_Q7XJV0-1  Q7XL74.pdb_B  0.806434  0.778532"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1268,7 +1268,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "(env) AlphaCRV$ alphacrv-rank \\\n",
+    "AlphaCRV$ alphacrv-rank \\\n",
     "--clusters_dir ./examples/AVRPia/AVRPia_vs_rice_clusters \\\n",
     "--min_members 5 \\\n",
     "--min_tmscore 0.2 \\\n",
@@ -1361,7 +1361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1370,7 +1370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1443,7 +1443,7 @@
        "4   P42211.pdb_B      Q8LNM1  P42211.pdb_B"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1468,7 +1468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1484,7 +1484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1802,7 +1802,7 @@
        "98      Q7XL74.pdb_B      Q8LMS1  Q7XL74.pdb_B"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1827,7 +1827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1991,7 +1991,7 @@
        "86         0.936709  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2009,7 +2009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2018,7 +2018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
