Updated README and notebooks

--- a/examples/AVRPik.ipynb
+++ b/examples/AVRPik.ipynb
@@ -22,7 +22,7 @@
     "# Prerequisites\n",
     "\n",
     "- Install AlphaCRV on a conda environment and activate it\n",
-    "- Download the models and sequences for this example from [Zenodo](https://zenodo.org/record/5525340/files/alphafold-multimer.tar.gz?download=1)"
+    "- Download the sequences, models and results for this example at [Zenodo](https://zenodo.org/records/10470744)"
    ]
   },
   {
@@ -63,10 +63,11 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "AlphaCRV$ alphacrv-cluster \\\n",
+    "```\n",
+    "(env) AlphaCRV$ alphacrv-cluster \\\n",
     "--bait ./examples/AVRPik/AVRPik.fasta \\\n",
     "--binders ./examples/AVRPik/AVRPik_binders.fasta \\\n",
     "--models_dir ./examples/AVRPik/AVRPik_vs_rice_models \\\n",
@@ -92,7 +93,8 @@
     "INFO:root:Aligning cluster 4 of 4...\n",
     "INFO:root:20 members.\n",
     "INFO:root:Calculating median alignment scores...\n",
-    "INFO:root:Done!!"
+    "INFO:root:Done!!\n",
+    "```"
    ]
   },
   {
@@ -103,9 +105,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "```\n",
     "(env) AlphaCRV$ ll examples/AVRPik/AVRPik_vs_rice_clusters/\n",
     "total 24K\n",
     "-rw-r--r-- 1 example g-example 1.3K Jan  3 16:30 binders_regions.csv\n",
@@ -113,7 +116,8 @@
     "drwxr-xr-x 1 example g-example    0 Jan  3 16:30 pdbs_trimmed/\n",
     "drwxr-xr-x 1 example g-example    0 Jan  3 16:30 seqclusters/\n",
     "drwxr-xr-x 1 example g-example    0 Jan  3 16:30 strclusters/\n",
-    "-rw-r--r-- 1 example g-example  19K Jan  3 16:30 trimmed_binders.fasta"
+    "-rw-r--r-- 1 example g-example  19K Jan  3 16:30 trimmed_binders.fasta\n",
+    "```"
    ]
   },
   {
@@ -1257,10 +1261,11 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "AlphaCRV$ alphacrv-rank \\\n",
+    "```\n",
+    "(env) AlphaCRV$ alphacrv-rank \\\n",
     "--clusters_dir ./examples/AVRPik/AVRPik_vs_rice_clusters \\\n",
     "--min_members 5 \\\n",
     "--min_tmscore 0.2 \\\n",
@@ -1308,7 +1313,8 @@
     "INFO:root:Clustering Q6K9R5.pdb_B\n",
     "INFO:root:Running structural clustering...\n",
     "INFO:root:Processing output...\n",
-    "INFO:root:Done!!"
+    "INFO:root:Done!!\n",
+    "```"
    ]
   },
   {
