--- a/examples/SKP1.ipynb
+++ b/examples/SKP1.ipynb
@@ -22,7 +22,8 @@
     "# Prerequisites\n",
     "\n",
     "- Install AlphaCRV on a conda environment and activate it\n",
-    "- Download the models and sequences for this example from [Zenodo](https://zenodo.org/record/5525340/files/alphafold-multimer.tar.gz?download=1)"
+    "- You can download the sequences, resulting clusters, and PyMOL sessions for this example at [Zenodo](https://zenodo.org/records/10470744)\n",
+    "- The models for this example are very heavy (>140 GB), so we will provide them upon request if you wish to run AlphaCRV on them. Please contact us at stefan.arold@kaust.edu.sa, or francisco.guzmanvega@kaust.edu.sa"
    ]
   },
   {
@@ -63,10 +64,11 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "AlphaCRV$ alphacrv-cluster \\\n",
+    "```\n",
+    "(env) AlphaCRV$ alphacrv-cluster \\\n",
     "--bait ./examples/SKP1/SKP1.fasta \\\n",
     "--binders ./examples/SKP1/SKP1_binders.fasta \\\n",
     "--models_dir ./examples/SKP1/SKP1_vs_rice_models \\\n",
@@ -93,7 +95,8 @@
     "INFO:root:Aligning cluster 4 of 4...\n",
     "INFO:root:9 members.\n",
     "INFO:root:Calculating median alignment scores...\n",
-    "INFO:root:Done!!"
+    "INFO:root:Done!!\n",
+    "```"
    ]
   },
   {
@@ -104,9 +107,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "```\n",
     "(env) AlphaCRV$ ll examples/SKP1/SKP1_vs_rice_clusters/\n",
     "total 248K\n",
     "-rw-r--r-- 1 example g-example  15K Jan  4 13:39 binders_regions.csv\n",
@@ -114,7 +118,8 @@
     "drwxr-xr-x 1 example g-example    0 Jan  4 13:39 pdbs_trimmed/\n",
     "drwxr-xr-x 1 example g-example    0 Jan  4 13:39 seqclusters/\n",
     "drwxr-xr-x 1 example g-example    0 Jan  4 13:39 strclusters/\n",
-    "-rw-r--r-- 1 example g-example 230K Jan  4 13:39 trimmed_binders.fasta"
+    "-rw-r--r-- 1 example g-example 230K Jan  4 13:39 trimmed_binders.fasta\n",
+    "```"
    ]
   },
   {
@@ -1194,9 +1199,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "```\n",
     "(env) AlphaCRV$ alphacrv-rank \\\n",
     "--clusters_dir ./examples/SKP1/SKP1_vs_rice_clusters \\\n",
     "--min_members 5 \\\n",
@@ -1260,7 +1266,8 @@
     "INFO:root:Clustering Q65XD1.pdb_B\n",
     "INFO:root:Running structural clustering...\n",
     "INFO:root:Processing output...\n",
-    "INFO:root:Done!!"
+    "INFO:root:Done!!\n",
+    "```"
    ]
   },
   {
