--- a/examples/AVRPia.ipynb
+++ b/examples/AVRPia.ipynb
@@ -22,7 +22,7 @@
     "# Prerequisites\n",
     "\n",
     "- Install AlphaCRV on a conda environment and activate it\n",
-    "- Download the models and sequences for this example from [Zenodo](https://zenodo.org/record/5525340/files/alphafold-multimer.tar.gz?download=1)"
+    "- Download the sequences, models and results for this example at [Zenodo](https://zenodo.org/records/10470744)"
    ]
   },
   {
@@ -63,10 +63,11 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "AlphaCRV$ alphacrv-cluster \\\n",
+    "```\n",
+    "(env) AlphaCRV$ alphacrv-cluster \\\n",
     "--bait ./examples/AVRPia/AVRPia.fasta \\\n",
     "--binders ./examples/AVRPia/AVRPia_binders.fasta \\\n",
     "--models_dir ./examples/AVRPia/AVRPia_vs_rice_models \\\n",
@@ -90,7 +91,8 @@
     "INFO:root:Aligning cluster 3 of 3...\n",
     "INFO:root:10 members.\n",
     "INFO:root:Calculating median alignment scores...\n",
-    "INFO:root:Done!!"
+    "INFO:root:Done!!\n",
+    "```"
    ]
   },
   {
@@ -101,9 +103,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "```\n",
     "(env) AlphaCRV$ ll examples/AVRPia/AVRPia_vs_rice_clusters/\n",
     "total 36K\n",
     "-rw-r--r-- 1 example g-example 2.0K Jan  3 19:39 binders_regions.csv\n",
@@ -111,7 +114,8 @@
     "drwxr-xr-x 1 example g-example    0 Jan  3 19:39 pdbs_trimmed/\n",
     "drwxr-xr-x 1 example g-example    0 Jan  3 19:39 seqclusters/\n",
     "drwxr-xr-x 1 example g-example    0 Jan  3 19:39 strclusters/\n",
-    "-rw-r--r-- 1 example g-example  29K Jan  3 19:39 trimmed_binders.fasta"
+    "-rw-r--r-- 1 example g-example  29K Jan  3 19:39 trimmed_binders.fasta\n",
+    "```"
    ]
   },
   {
@@ -1265,10 +1269,11 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "AlphaCRV$ alphacrv-rank \\\n",
+    "```\n",
+    "(env) AlphaCRV$ alphacrv-rank \\\n",
     "--clusters_dir ./examples/AVRPia/AVRPia_vs_rice_clusters \\\n",
     "--min_members 5 \\\n",
     "--min_tmscore 0.2 \\\n",
@@ -1331,7 +1336,8 @@
     "INFO:root:Clustering Q7XL74.pdb_B\n",
     "INFO:root:Running structural clustering...\n",
     "INFO:root:Processing output...\n",
-    "INFO:root:Done!!"
+    "INFO:root:Done!!\n",
+    "```"
    ]
   },
   {
